# hog

./: CMakeLists.txt  README.md
lib/darknet/src/: connected_layer.c  image.c
src/: detector.cpp  detector.h  main.cpp
